kubernetes/applications/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
